k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: object-detection
  labels:
    name: object-detection
