k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: object-detection
  labels:
    name: object-detection
    app.kubernetes.io/name: object-detection
    app.kubernetes.io/instance: production
