k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-detection-worker-service
  labels:
    app: object-detection-worker
spec:
  selector:
    app: object-detection-worker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
