k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: object-detection-worker-service
  namespace: object-detection
  labels:
    app: object-detection-worker
  annotations:
    cloud.google.com/backend-config: '{"default": "object-detection-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: object-detection-worker
